# openclaw-contained

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.monitoring.yml  docker-compose.yml  docker-dind-daemon.json  test_api.sh
agent-images/: README.md  agent_profiles.yaml
agent-images/base/: CHANGELOG.md  Dockerfile  agent_runtime.py  policy_client.py
agent-images/nanobot/: Dockerfile  nanobot-wrapper.py  requirements.txt  taskforge-adapter.py
agent-images/picoclaw/: Dockerfile  agent_runner.sh  picoclaw-adapter.sh  policy_check.sh
agent-images/zeroclaw/: Dockerfile  config.py  requirements.txt  zeroclaw-wrapper.py
agent-images/zeroclaw/agent/: Cargo.toml
agent-images/zeroclaw/agent/src/: main.rs
config/loki/: loki-config.yml
config/prometheus/: prometheus.yml
docker-dind/: Dockerfile  entrypoint-wrapper.sh
docs/: DEPLOYMENT.md  GVISOR_SETUP.md  POLICY_SCHEMA.md
frontend/: Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: init-db.sh  test-ollama-connection.sh
services/agent-executor/: Dockerfile  Dockerfile.base  Dockerfile.openclaw  agent.py  openclaw-wrapper.js  openclaw-wrapper.py  openclaw-wrapper.py.bak
services/api-gateway/: Dockerfile  agent_profiles.py  config.py  control_plane_client.py  main.py  requirements.txt  schemas.py  session_manager.py
services/control-plane/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt  schemas.py  temporal_client.py
services/image-builder/: Dockerfile  (+2 more)
(+32 files in other folders)
