[package]
name = "zeroclaw-agent"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust agent runtime for OpenClaw/TaskForge"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "zeroclaw-agent"
path = "src/main.rs"
